packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/get.js
export const get = () => {
	throw new Error('oops');
};
